# AyD_proyect

./: README.md
backend/: .gitignore  main.py  pyproject.toml  vulture_whitelist.py
backend/app/: __init__.py
backend/app/application/: __init__.py
backend/app/application/agents/: analyzer.py  base.py  classifier.py  documenter.py  parser_agent.py  state.py  translator.py  validator.py
backend/app/application/dto/: __init__.py
backend/app/application/use_cases/: __init__.py  analysis_use_cases.py  hitl_use_cases.py  session_use_cases.py
backend/app/application/workflows/: __init__.py  analysis_workflow.py
backend/app/domain/: __init__.py
backend/app/domain/events/: __init__.py
backend/app/domain/models/: __init__.py  analysis.py  ast.py
backend/app/domain/repositories/: __init__.py  interfaces.py
backend/app/domain/services/: __init__.py  complexity_service.py  diagram_service.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/llm/: __init__.py  llm_service.py
backend/app/infrastructure/messaging/: __init__.py
backend/app/infrastructure/parser/: __init__.py  grammar.lark  language_parser.py  lark_parser.py  preprocessor.py  transformer.py  visitor.py
backend/app/infrastructure/persistence/: __init__.py  mongodb_service.py  repositories.py
backend/app/infrastructure/workflows/: state_store.py
backend/app/presentation/: __init__.py
backend/app/presentation/api/: __init__.py  app.py  dependencies.py  schemas.py  socket_server.py
backend/app/shared/: __init__.py  config.py  di.py  exceptions.py  file_reader.py
(+61 files in other folders)
